--- a/src/main/webapp/static/css/admin.css
+++ b/src/main/webapp/static/css/admin.css
@@ -3,7 +3,7 @@ main {
 }
 
 h1 {
-    margin-top: 30px;
+    margin-top: 15px;
 }
 
 .table-caption {
@@ -15,4 +15,8 @@ h1 {
 .link-back {
     font-size: 24px;
     padding-bottom: 50px;
+}
+
+table{
+    margin-top: 10px;
 }
